
    o New function, merge_similar(): identify and merge similar motifs in a
      list of motifs. Essentially, a wrapper around compare_motifs(), hclust(),
      cutree(), and merge_motifs().

    o New function, view_logo(): plot logos with matrix input instead of motif
      object input.  Arbitrary column heights and multi-character letters are
      allowed.

    o trim_motifs(..., trim.from): trim from both directions or just one.

    o shuffle_sequences(..., window, window.size, window.overlap): shuffle
      sequences iteratively in windows of specified size.

    o scan_sequences(..., return.granges): optionally return a GRanges object.

    o scan_sequences(..., mask.hits, mask.hits.by.strand, mask.hits.strat):
      mask motif hits in sequences during scanning, preventing overlapping hits
      by the same motifs from being returned. This can optionally be done per
      strand. Either the first hit or the highest scoring hit can be preserved
      per set of overlapping hits.

MINOR CHANGES

    o Some additions and clean-up to documentation and vignettes.

    o Support for MotIV-pwm2 formatted motifs has been dropped, as the package
      is no longer a part of the current Bioconductor version.

    o read_matrix()/write_matrix(): the sep argument can now be NULL (no
      seperators.)

    o The Rdpack dependency has been dropped.

    o merge_motifs(): single-motif input now simply returns the motif instead
      of throwing an error.

CHANGES IN VERSION 1.8.5
------------------------

BUG FIXES

   o Found a typo in the consensus to PPM calculation for the DNA ambiguity
     letter Y which resulted in incorrect PPM values.

CHANGES IN VERSION 1.8.4
------------------------

BUG FIXES

   o Fixed incorrect handling of the -alph parameter in run_meme() (reported
      by @Irenexzwen).

CHANGES IN VERSION 1.8.3
------------------------

BUG FIXES

    o Fixed improper handling of MEME version string in read_meme().

CHANGES IN VERSION 1.8.2