@@ -6,6 +6,7 @@ S3method(print,universalmotif_df)
 export(add_gap)
 export(add_multifreq)
 export(as.data.frame)
+export(average_ic)
 export(cbind)
 export(colMeans)
 export(colSums)
